--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,10 @@
   src: url('./fonts/CarbonaTest-ExtraBold.otf');
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   padding: 0;
